--- a/InfoBus/Base.lproj/Main.storyboard
+++ b/InfoBus/Base.lproj/Main.storyboard
@@ -64,8 +64,8 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="S6R-Ps-R01"/>
                                 </connections>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="popayan_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="j9x-40-iVV">
-                                <rect key="frame" x="45" y="-29" width="230" height="257"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="popayan_logo2.png" translatesAutoresizingMaskIntoConstraints="NO" id="j9x-40-iVV">
+                                <rect key="frame" x="45" y="50" width="230" height="102"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -197,6 +197,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="popayan_logo.png" width="195" height="195"/>
+        <image name="popayan_logo2.png" width="195" height="78"/>
     </resources>
 </document>
